--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ target_compile_options(
     -Wall
     -Wextra
     -pedantic-errors
+    -pthread
 )
 
 target_link_libraries(
@@ -27,6 +28,7 @@ target_link_libraries(
     boost_system
     boost_filesystem
     microhttpd
+    pthread
 )
 
 add_custom_target(
