--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ target_compile_options(
     -Wall
     -Wextra
     -pedantic-errors
-    #-pthread
+    -pthread
 )
 
 target_link_libraries(
@@ -28,7 +28,8 @@ target_link_libraries(
     boost_system
     boost_filesystem
     microhttpd
-    #pthread
+    pthread
+    yaml-cpp
 )
 
 add_custom_target(
