--- a/Rust/fancyndex/Cargo.toml
+++ b/Rust/fancyndex/Cargo.toml
@@ -9,6 +9,7 @@ rocket_codegen = "0.3.3"
 serde = "1.0"
 serde_derive = "1.0"
 toml = "0.4"
+chrono = "0.4.0"
 
 [dependencies.rocket_contrib]
 version = "*"
