--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["zxvfxwing <zxvfxwing@protonmail.com>"]
 
 [dependencies]
-rocket = "0.3.3"
+rocket = { version = "0.3.3", features = ["tls"] }
 rocket_codegen = "0.3.3"
 serde = "1.0"
 serde_derive = "1.0"
