--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ chrono = "0.4.0"
 [dependencies.rocket_contrib]
 version = "*"
 default-features = false
-features = ["handlebars_templates", "tera_templates"]
+features = ["handlebars_templates", "tera_templates", "json"]
