--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ serde = "1.0"
 serde_derive = "1.0"
 toml = "0.4"
 chrono = "0.4.0"
+crossbeam = "0.3.0"
+
 
 [dependencies.rocket_contrib]
 version = "*"
