--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ serde = "1.0"
 serde_derive = "1.0"
 toml = "0.4"
 chrono = "0.4.0"
-crossbeam = "0.3.0"
+walkdir = "2"
 
 
 [dependencies.rocket_contrib]
