--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.9.1"
 authors = ["zxvfxwing <zxvfxwing@protonmail.com>"]
 
 [dependencies]
+rocket-file-cache = "0.10.1"
 rocket = { version = "0.3.3", features = ["tls"] }
 rocket_codegen = "0.3.3"
 serde = "1.0"
