New version inco

--- a/Fancyndex.toml
+++ b/Fancyndex.toml
@@ -1,35 +1,2 @@
-# Fancyndex intern configuration
-#
-# If you want to change listen PORT of your application
-# Go in Rocket.toml, configuration file of the webframework.
-
-#
-# "Walk options"
-#
-# Tell fancyndex if you want to run throught :
-# -> hidden files (dotfiles)
-# -> symbolic link
-#
-# default :
-#       do_hidden = false
-#       do_symlink = false
-#
-[walk_options]
-do_hidden = true
-do_symlink = true
-
-#
-# "Unit options"
-#
-# (1)
-# Tell fancyndex what kind of prefix use
-# to display your files / directories size unit.
-#
-# -> Binary prefix
-# -> Decimal prefix
-#
-# default :
-#       binary_unit = true
-#
-[unit_options]
-binary_unit = true
+[folder]
+path = ".."
