--- a/Fancyndex.toml
+++ b/Fancyndex.toml
@@ -1,2 +1,11 @@
 [folder]
 path = ".."
+
+[walk_opt]
+# Handle hidden files (.dotfiles)?
+# Default false
+hidden = false
+
+# Handle symbolic link ?
+# Default false
+symlink = false
