Start working with Path & PathBuf, new mod filesystem

--- a/Fancyndex.toml
+++ b/Fancyndex.toml
@@ -1,5 +1,7 @@
-[folder]
-path = "/home/spoken/"
+[root]
+# Root path
+# Default is fancyndex folder's parent
+path = ".."
 
 [walk_opt]
 # Handle hidden files (.dotfiles)?
