--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ serde_derive = "1.0"
 serde_json = "1.0"
 walkdir = "2.0"
 toml = "0.4.5"
+rocket = "0.3.6"
+rocket_codegen = "0.3.6"
+
+[dependencies.rocket_contrib]
+version = "*"
+default-features = false
+features = ["json", "tera_templates"]
