--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ walkdir = "2.0"
 toml = "0.4.5"
 rocket = "0.3.6"
 rocket_codegen = "0.3.6"
+rayon = "0.9.0"
 
 [dependencies.rocket_contrib]
 version = "*"
