feature: Redirect to parent folder when path doesn't exists or is not a dir

--- a/Fancyndex.toml
+++ b/Fancyndex.toml
@@ -6,8 +6,8 @@ path = "/home/spoken/"
 [walk_opt]
 # Handle hidden files (.dotfiles)?
 # Default false
-hidden = true
+hidden = false
 
 # Handle symbolic link ?
 # Default false
-symlink = true
+symlink = false
