--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ toml = "0.4.5"
 rocket = "0.3.6"
 rocket_codegen = "0.3.6"
 rayon = "0.9.0"
+chrono = "0.4"
 
 [dependencies.rocket_contrib]
 version = "*"
