--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ toml = "0.4.5"
 rocket = "0.3.6"
 rocket_codegen = "0.3.6"
 rayon = "0.9.0"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 
 [dependencies.rocket_contrib]
 version = "*"
