--- a/Fancyndex.toml
+++ b/Fancyndex.toml
@@ -6,15 +6,15 @@ path = "/home/spoken"
 [walk_opt]
 # Handle hidden files (.dotfiles)?
 # Default false
-hidden = false
+hidden = true
 
 # Handle symbolic link ?
 # Default false
-symlink = false
+symlink = true
 
 [entries_opt]
 # Datetime format :
-datetime_format = "%Y-%m-%d %T"
+dtime_format = "%Y-%m-%d %T"
 
 # Wanted unit size
 # 
